[gd_scene load_steps=9 format=2]

[ext_resource path="res://Assets/tilemap_packed.png" type="Texture" id=1]
[ext_resource path="res://Enemy/enemy.gd" type="Script" id=2]

[sub_resource type="CapsuleShape2D" id=3]
radius = 1896.0

[sub_resource type="CapsuleShape2D" id=1]
radius = 6.0
height = 0.0

[sub_resource type="CircleShape2D" id=4]

[sub_resource type="Animation" id=6]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("hitBox/CollisionShape2D:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1e-05, 1e-05 ) ]
}

[sub_resource type="Animation" id=5]
resource_name = "scale_hit_collision"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("hitBox/CollisionShape2D:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1e-05, 1e-05 ), Vector2( 1, 1 ), Vector2( 1e-05, 1e-05 ) ]
}

[sub_resource type="CapsuleShape2D" id=2]
radius = 6.0
height = 0.0

[node name="Enemy" type="KinematicBody2D"]
show_behind_parent = true
collision_layer = 3
collision_mask = 3
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
show_behind_parent = true
light_mask = 2
texture = ExtResource( 1 )
hframes = 12
vframes = 11
frame = 109

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]

[node name="Timer" type="Timer" parent="."]
wait_time = 0.1
autostart = true

[node name="LabelTimer" type="Timer" parent="."]

[node name="Label" type="Label" parent="."]
margin_left = -20.0
margin_top = -23.0
margin_right = 20.0
margin_bottom = -9.0

[node name="DetectionZone" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectionZone"]
shape = SubResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
light_mask = 2
position = Vector2( 0, 2 )
z_index = 1
shape = SubResource( 1 )

[node name="PlayerDetector" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerDetector"]
shape = SubResource( 4 )

[node name="HitAnimation" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 6 )
anims/scale_hit_collision = SubResource( 5 )

[node name="hitBox" type="Area2D" parent="."]
collision_layer = 3
collision_mask = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="hitBox"]
position = Vector2( 0, 2 )
scale = Vector2( 1e-05, 1e-05 )
shape = SubResource( 2 )

[connection signal="body_entered" from="DetectionZone" to="." method="_on_DetectionZone_body_entered"]
[connection signal="area_entered" from="PlayerDetector" to="." method="_on_PlayerDetector_area_entered"]
[connection signal="area_exited" from="PlayerDetector" to="." method="_on_PlayerDetector_area_exited"]
